--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@
   padding-left: 2em;
   padding-right: 2em;
 }
+.column > h2 {
+  font-size: 1.1em;
+}
 
 
 .line {
@@ -35,7 +38,7 @@
   background-color: #c7c7c7;
   border-radius: 10px;
   cursor: pointer;
-  font-size: 0.8em;
+  font-size: 1em;
 } 
 
 .fact-item {
@@ -53,9 +56,11 @@
 .add-button {
   margin-top: 1em;
   background-color: #c7c7c7;
-  padding: 0.7em;
-  border-style: none;
-  border-radius: 2em;
+  border: 1px solid rgb(192, 192, 192);
+  border-radius: 50%;
+  font-weight: bolder;
+  height: 42px;
+  width: 42px;
 }
 
 .add-button:hover{
