--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   display: flex;
   font-weight: bold;
   justify-content: space-between;
-  padding: 1em;
+  padding: 2em;
   margin-bottom: 1em;
   border-bottom: #c7c7c7 1px dashed;
 }
@@ -42,6 +42,7 @@
   position: absolute;
   height: 1px;
   background: #575757;
+  z-index: 1;
 }
 
 .item {
@@ -52,7 +53,12 @@
   cursor: pointer;
   font-size: 1em;
   width: 100%;
+  z-index: 2;
+  
 } 
+.item:hover {
+  box-shadow: 0 0 0 2px #d400ff;
+}
 
 .input-item {
   display: flex;
