--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,10 @@
   border-radius: 10px;
   cursor: pointer;
   font-size: 1em;
-  width: 100%;
   z-index: 2;
+  position: relative;
+  display: flow-root;
+  min-height: 24px;
 } 
 .item:hover {
   box-shadow: 0 0 0 2px #d400ff;
@@ -91,22 +93,33 @@ input[type=text], select, textarea {
 }
 
 .wrapper {
-  display: flex;
-  justify-content: flex-start;
-  background-color: #303030;
+  position: relative;
   border-radius: 10px;
   margin: 5px;
+  min-height: 36px;
 }
 
 .wrapper-item-toolbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    padding: 0.5em;
-    color: #ffffff;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  color: #000000;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.6);
+  z-index: 2;
+  top: 2px;
+  right: 2px;
+  border-radius: 16px;
+  border: none;
 }
 
 .wrapper-item-toolbar > div {
   cursor: pointer;
+  border-radius: 16px;
+  padding: 6px 6px;
+}
+
+.wrapper-item-toolbar:hover{
+  background: rgba(255, 255, 255, 0.8);
 }
