--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,7 @@ input[type=text], select, textarea {
   border-radius: 10px;
   margin: 5px;
   min-height: 36px;
+  width: 100%;
 }
 
 .wrapper-item-toolbar {
