--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 body {
   margin: 0;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  font-family: Consolas, 'Courier New', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Consolas, 'Courier New', monospace;
 }
 
 button, input, select, textarea {
   font: inherit;
+  font-size: small;
 }
